--- a/package.json
+++ b/package.json
@@ -3,18 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@sudy/sui-react": "^2.4.21",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "antd": "^3.26.19",
+    "babel-plugin-import": "^1.13.3",
+    "babel-polyfill": "^6.26.0",
+    "css-loader": "^5.1.3",
+    "customize-cra": "^1.0.0",
+    "less": "2.7.3",
+    "less-loader": "5.0.0",
+    "mockjs": "^1.1.0",
+    "react": "^16.0.2",
+    "react-app-rewired": "^2.1.8",
+    "react-dom": "^16.0.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "style-loader": "^2.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
